[gd_scene load_steps=5 format=2]

[ext_resource path="res://amino4.png" type="Texture" id=1]
[ext_resource path="res://AminoAcidDrop.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 51.4918

[sub_resource type="CapsuleShape2D" id=2]
radius = 147.807

[node name="AminoAcidDrop" type="StaticBody2D"]
scale = Vector2( 0.18, 0.18 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="GrowTween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 32.409, 20.6239 )
shape = SubResource( 2 )
[connection signal="tween_all_completed" from="GrowTween" to="." method="_on_GrowTween_tween_all_completed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
